<resources>
    <string name="app_name">تلدات معكن</string>
    <string name="Sub_Title">#تلدات_معك</string>
    <string name="call_us">إتصل</string>
    <string name="message_us">رسالة نصية</string>
    <string name="reclamation">سجلي شكايتك</string>
    <string name="sub_title_recla">منصة الإستماع والدعم وللتوجيه</string>
    <string name="full_name">الاسم الكامل</string>
    <string name="phone">رقم الهاتف</string>
    <string name="titleSpnner">انواع العنف</string>
    <string name="address">العنوان</string>
    <string name="reclame">تبليغ</string>
    <string name="dd">hhh</string>
    <string name="savingRecla">جاري التبليغ</string>
    <string name="success_reclamation">لقد تم التبليغ بنجاح</string>
    <string name="success">تم</string>
    <string name="go_out">الخروج</string>
    <string name="go_back">العودة</string>
    <string name="Failure">فشل</string>
    <string name="failure_reclamation">فشل التبليغ</string>
    <string name="try_again">محاولة أخرى</string>
    <string name="name_obligation">يجب عليك ادخال الاسم</string>
    <string name="address_obligation">يجب عليك ادخال العنوان</string>
    <string name="number_invalide">رقم هاتفك غير صحيح</string>
    <string name="message">رسالة</string>
    <string name="connecteToInternet">يجب عليك الاتصال بالانترنت</string>
    <string name="audioVocalString">تسجيل صوتي</string>
    <string name="arab">arab</string>
    <string name="aboutApp">حول التطبيق</string>
    <string name="societeTildat">جمعية تلدات</string>
    <string name="urNotAlone">أنت لست وحدك</string>
    <string name="sendRecla">إرسال شكاية</string>
    <string name="name">اسم الضحية</string>
    <string name="urReclam">شكايتك</string>
    <string name="send">ارسلي</string>
    <string name="plateformTildat">منصة تلدات</string>
    <string name="womensVlente">للنساء ضحايا العنف</string>
    <string name="chal7a">امازيغية</string>
</resources>
