<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:chainUseRtl="true"
    tools:context=".ReclamationActivity">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6E6"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/connectedLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButtonToMainActivity"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/_25sdp"
            android:text="@string/sendRecla"
            android:textColor="#000"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <ScrollView
        android:id="@+id/connectedLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/teldatmaakn"
                android:tint="#000"
                app:layout_constraintBottom_toTopOf="@+id/editTextFullName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="@drawable/edit_text_design"
                android:ems="10"
                android:gravity="right|center_vertical"

                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="25dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView4" />


            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="@drawable/edit_text_design"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="25dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />


            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="@drawable/edit_text_design"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="25dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextmessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPhone" />


            <EditText
                android:id="@+id/editTextmessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/edit_text_design"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:hint="@string/urReclam"
                android:inputType="textMultiLine"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"

                android:paddingBottom="35dp"
                app:layout_constraintBottom_toTopOf="@+id/imageButtonRecord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextAddress" />


            <ImageButton
                android:id="@+id/imageButtonRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/micdesign"
                app:layout_constraintBottom_toTopOf="@+id/playingAudioLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextmessage" />

            <LinearLayout
                android:id="@+id/playingAudioLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/buttonreclamationFinal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageButtonRecord">


                <Button
                    android:id="@+id/buttonMediaplay"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/ic_play_circle_outline_black_24dp" />

                <Button
                    android:id="@+id/buttonMediastop"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/ic_pause_circle_outline_black_24dp"
                    android:visibility="gone" />

                <SeekBar
                    android:id="@+id/seekBarMediaAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Chronometer
                    android:id="@+id/chronoRecordAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="40dp"
                    android:gravity="center" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonreclamationFinal"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/button_design_recla"
                android:text="@string/send"
                android:textColor="#fff"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playingAudioLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/plateformTildat"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedLayout"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/womensVlente"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />


    <TextView
        android:id="@+id/notConnected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/connecteToInternet"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>




